# open-rmbt-client-cli

./: README.md
.github/workflows/: build.yml
clientC/: Makefile  README.md
clientC/src/: connection.c  connection.h  control.c  control.h  main.c  pretest.c  pretest.h  tests.c  tests.h  uuid_store.c  uuid_store.h
clientJava/: README.md  pom.xml
clientJava/src/main/java/at/rtr/rmbt/client/: ControlClient.java  Main.java  PingResult.java  Pretest.java  PretestResult.java  RmbtConn.java  TestParams.java  Tests.java  TransferResult.java  UuidStore.java
clientRust/: Cargo.toml  README.md  build.rs
clientRust/src/: connection.rs  control.rs  main.rs  pretest.rs  uuid_store.rs
src/: connection.rs  control.rs  main.rs  pretest.rs  tests.rs
