[package]
name = "rmbt-client"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "rmbt-client"
path = "src/main.rs"

[dependencies]
# CLI
clap = "4"

# JSON (control server request/response)
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# HTTP client for control server
ureq = { version = "2", features = ["json"] }

# TLS for test server connection
rustls          = { version = "0.23", features = ["ring"] }
webpki-roots    = "0.26"
rustls-pki-types = "1"

# WebSocket framing (RMBTws protocol variant)
tungstenite = { version = "0.29" }

# Base64 for WebSocket handshake key
base64 = "0.22"

# Error handling
anyhow = "1"

# Random data for upload chunks and WebSocket key
fastrand = "2"
